If images are too big they will be scaled down also css fixes

--- a/client/src/css/components/global/_sidebar.scss
+++ b/client/src/css/components/global/_sidebar.scss
@@ -4,10 +4,21 @@
 
   .sidebar__accordion {
     height: 100%;
+    max-height: 100%;
     overflow: auto;
     border-radius: 0;
     border-top: none;
     border-bottom: none;
     border-right: none;
   }
+}
+
+.sidebar__accordion {
+  height: 100%;
+  max-height: 100%;
+  overflow: auto;
+  border-radius: 0;
+  border-top: none;
+  border-bottom: none;
+  border-right: none;
 }
